--- a/index.html
+++ b/index.html
@@ -19,17 +19,36 @@
 			renderer.setSize( window.innerWidth, window.innerHeight );
 			document.body.appendChild( renderer.domElement );
 
+			//Losd model
 			const loader = new GLTFLoader(); 
-			scene.add( loader );
+			
+			loader.load( 'model.glb', function ( gltf ) {
+			scene.add( gltf.scene );
 			camera.position.z = 5;
+			renderer.render( scene, camera );
 
-			const animate = function () {
-				requestAnimationFrame( animate );
+			}, undefined, function ( error ) {
+			console.error( error );
+			} );
 
-				renderer.render( scene, camera );
-			};
 
-			animate();
+
+			// const scene = new THREE.Scene();
+			// const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
+
+			// const renderer = new THREE.WebGLRenderer();
+			// renderer.setSize( window.innerWidth, window.innerHeight );
+			// document.body.appendChild( renderer.domElement );
+
+			// const geometry = new THREE.BoxGeometry();
+			// const material = new THREE.MeshBasicMaterial( { color: 0x00ff00 } );
+			// const cube = new THREE.Mesh( geometry, material );
+			// scene.add( cube );
+
+			// camera.position.z = 5;
+			// renderer.render( scene, camera );
+		
+
         
 
         </script> 
